# gemini-mcp

./: README.md  agent__gemini-analyzer.md  install-claude-config.sh  main.py  pyproject.toml
commands/: gemini-analyze.md  gemini-arch.md  gemini-audit.md  gemini-overview.md  gemini-verify.md
src/gemini_mcp/: __init__.py
