[project]
name = "gemini-mcp"
version = "0.1.0"
description = "MCP server that provides tools for analyzing codebases using Gemini CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.14.0",
]

[project.scripts]
gemini-mcp = "gemini_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
